name:                cocoa-notify
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/konn/cocoa-notify#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag build-examples
  default: False

library
  hs-source-dirs:      src
  c-sources:           src/System/Notification/Cocoa.m, cbits/BundleSnatcher.m
  exposed-modules:     System.Notification.Cocoa
  build-depends:       base >= 4.7 && < 5
                     , inline-c
                     , inline-c-objc
                     , text
                     , bytestring
                     , time
                     , random
  include-dirs:        cbits
  cc-options:          -Wall -fobjc-arc 
  ghc-options:         -Wall -fllvm -optl-ObjC
  default-language:    Haskell2010
  ghc-options:         -Wall
  frameworks:          Foundation

executable hello-notify
  if flag(build-examples)
     buildable: True
  else
     buildable: False
  hs-source-dirs:      examples
  Main-is:             hello-notify.hs
  build-depends:       base
                     , cocoa-notify
  default-language:    Haskell2010
  ghc-options:         -Wall


test-suite cocoa-notify-test
  buildable:           False
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cocoa-notify
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/konn/cocoa-notify
